eks-iac/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: stratus-cs2-capstone2-eks
    app.kubernetes.io/instance: stratus-cs2-capstone2-eks-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: stratus-cs2-capstone2-eks-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stratus-cs2-capstone2-eks
  template:
    metadata:
      labels:
        app: stratus-cs2-capstone2-eks
    spec:
      containers:
        - name: stratus-cs2-eks-repo-container
          image: 962804699607.dkr.ecr.us-west-2.amazonaws.com/stratus-cs2-eks-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
