eks-iac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stratus-cs2-capstone2-eks
  labels:
    app.kubernetes.io/name: stratus-cs2-capstone2-eks
    app.kubernetes.io/instance: stratus-cs2-capstone2-eks-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  
spec:
  selector:
    app: stratus-cs2-capstone2-eks
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
